--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,45 @@
-//portfolio1
+html{
+    background-color: #f7f2ee;
+    color: #4d4c4a;
+}
+nav{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
+    width: auto;
+    overflow: hidden;
+    padding: 2rem;
+}
+#name{
+    font-size: 5rem;
+    font-family: 'Silkscreen', cursive;
+    margin-bottom: 0;
+    justify-self:center;
+    grid-row: 1/2;
+    grid-column: 2 / 4
+}
+
+#menu{
+    display: grid;
+    grid-template-rows: 1;
+    grid-template-columns: 5;
+    grid-row: 2/3;
+    grid-column: 2 / 4;
+    list-style-type: none;
+    font-size: 2rem;
+    font-family: 'Cardo', serif;
+    margin-top: 0;
+}
+
+#menu div{
+    cursor: pointer;
+}
+#menu #about{
+    grid-column: 2 /3;
+}
+#menu #project{
+    grid-column: 3/4;
+}
+#menu #contact{
+    grid-column: 4/5;
+}
