Add about me section

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ nav{
     margin-bottom: 0;
     justify-self:center;
     grid-row: 1/2;
-    grid-column: 2 / 4
+    grid-column: 1 / 5;
 }
 
 #menu{
@@ -42,4 +42,26 @@ nav{
 }
 #menu #contact{
     grid-column: 4/5;
+}
+#about-me-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+}
+#about-me-container img{
+    overflow: auto;
+    width: 15rem;
+    grid-column:2;
+    border-top: 10px solid grey;
+    border-bottom: 5px solid grey;
+    border-right: 5px solid grey;
+    border-left: 10px solid grey;
+    border-radius: 5px;
+}
+#about-me-text{
+    grid-column: 3/5;
+    padding-left: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.3rem;
 }
