Add projects sections

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,14 @@ nav{
 
 #menu div{
     cursor: pointer;
+    text-decoration: none;
 }
 #menu #about{
     grid-column: 2 /3;
+}
+#menu a{
+    text-decoration: none;
+    color:#4d4c4a;
 }
 #menu #project{
     grid-column: 3/4;
@@ -47,16 +52,17 @@ nav{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
+    margin-top: 20px;
     align-items: center;
 }
 #about-me-container img{
     overflow: auto;
     width: 15rem;
     grid-column:2;
-    border-top: 10px solid grey;
+    border-top: 5px solid grey;
     border-bottom: 5px solid grey;
     border-right: 5px solid grey;
-    border-left: 10px solid grey;
+    border-left: 5px solid grey;
     border-radius: 5px;
 }
 #about-me-text{
@@ -64,4 +70,63 @@ nav{
     padding-left: 1rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
+}
+#projects-container{
+    display: grid;
+    grid-template-columns: 1fr 1.25fr 1.25fr 1.25fr 1fr;
+    grid-template-rows: ;
+    height: 20rem;
+    justify-items: center;
+    margin-top: 30px;
+}
+#project-1{
+    border: 1px black solid;
+    background-color: lightgray;
+    color:#f7f2ee;
+    grid-row: 1;
+    grid-column: 2;
+    height: 75%;
+    width: 95%;
+}
+#project-2{
+    border: 1px black solid;
+    background-color: grey;
+    grid-row:1;
+    grid-column: 3;
+    height: 75%;
+    width: 95%;
+}
+#project-3{
+    border: 1px black solid;
+    background-color: #4d4c4a;
+    grid-row:1;
+    grid-column: 4;
+    height: 75%;
+    width: 95%;
+}
+#project-1-label{
+    display:flex;
+    grid-column: 2;
+    grid-row: 1;
+    align-items: flex-start;
+    margin-top: 20px;
+    font-family: 'Silkscreen', cursive;
+}
+#project-2-label{
+    display:flex;
+    align-items:flex-start;
+    margin-top: 20px;
+    color: black;
+    grid-column: 3;
+    font-family: 'Silkscreen', cursive;
+    grid-row: 1;
+}
+#project-3-label{
+    display:flex;
+    color: lightgray;
+    margin-top: 20px;
+    grid-column: 4;
+    grid-row: 1;
+    align-items:flex-start;
+    font-family: 'Silkscreen', cursive;
 }
