--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,16 @@ html{
     color: #4d4c4a;
 }
 nav{
+    background-color: #f7f2ee;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 2fr 1fr;
     width: auto;
     overflow: hidden;
-    padding: 2rem;
+    margin-top:0;
+    padding-top: 0;
+    padding-bottom: 2rem;
+
 }
 #name{
     font-size: 5rem;
